--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,6 @@
+.body{
+    background: #f5f5f6;
+}
 .logo{
     width: 120px;
     height: 31px;
@@ -110,6 +113,7 @@
     top:0;
     -webkit-transition:all 0.25s;
     transition:all 0.25s;
+    background: white;
 }
 .card_box:hover{
     /*border: 2px solid red;*/
@@ -141,7 +145,7 @@
     
 }
 .content_right{
-    background: blue
+    background: white
 }
 .myfooter{
     height: 80px;
